@@ -25,6 +25,7 @@ Verilator 5.007 devel
 * Fix pattern assignment to unpacked structs (#3510). [Mostafa Garnal]
 * Fix single-element replication to dynarray/unpacked/queue (#3548). [Gustav Svensk]
 * Fix very long VPI signal names (#3929). [Marlon James]
+* Fix VPI upper interface scopes not found (#3937). [David Stanford]
 
 
 Verilator 5.006 2023-01-22
